# wardenprotocol

./: .coderabbit.yaml  .coderabbit.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yml  .goreleaser-amd64.yaml  .goreleaser.yaml  .licenserc.json  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GUIDE.md  LICENSE  Makefile  NOTICE  README.md  SETUP.md  config.yml  cw_nameservice.wasm  deployWasmContract.ts  docker-compose.yml  fix-make-proto.diff  go.mod  go.sum  golint.sh  hyperlane-cosmos-init.sh  hyperlane.md  init.bat  init.sh  justfile  localnet.just  miden_verifier.wasm  package-lock.json  package.json  package.json.BAK  warden.Dockerfile  wardend.just
.github/: dependabot.yml  (+1 more)
contracts/: Cargo.toml  README.md  b64cairo.proof  b64test.json  cairo.proof  codecov.yml  contracts.ts  contracts2.js  contracts2.ts  contractsold.ts  deployMerkleVerifier.ts  deployMidenVerifier.ts  deployStarkVerifier.ts  deployWasmContract.ts  deployWatchlist.ts  example.proof  justfile  merkle.proof  midenBTC.outputs  midenBTC.proof  package-lock.json  package.json  protodefs.ts  queryWatchlist.ts  sk1.txt  sk2.txt  test.json  tsconfig.json  updateWatchlist.ts  utils.ts  utilsold.ts
contracts/blackbird/: Makefile  NOTICE  README.md  go.mod  go.sum
contracts/blackbird/cosmwasm-go/: BUILD.md  DEVELOPMENT.md  Dockerfile  Makefile
contracts/blackbird/cosmwasm-go/example/blackbird/: main.go
contracts/blackbird/cosmwasm-go/scripts/: strip_floats.sh
contracts/blackbird/cosmwasm-go/std/: exports.go  imports.go  memory_test.go
contracts/blackbird/cosmwasm-go/systest/: helpers.go
contracts/blackbird/docker/: compile.sh
contracts/blackbird/example/hackatom/: Makefile  hackatom.wasm  main.go
contracts/blackbird/example/queue/: queue.wasm
contracts/blackbird/fusion_blackbird_contract/: Makefile  fusion_blackbird_contract.wasm  main.go
contracts/blackbird/fusion_blackbird_contract/src/: contract.go  contract_tinyjson.go  contract_tinyjson_test.go
contracts/blackbird/scripts/: check.sh  compile.sh  increase_memory.sh
contracts/blackbird/std/: interfaces.go  memory.go
contracts/blackbird/std/mock/: mock_imports_test.go
contracts/blackbird/std/types/: env.go  env_tinyjson.go  fraction_tinyjson.go  query.go  query_tinyjson.go  subcall.go  systemerror.go  systemerror_tinyjson.go  types.go  types_tinyjson.go
contracts/contracts/basic-analyzer/: Cargo.toml
contracts/contracts/basic-analyzer/src/: contract.rs  error.rs  msg.rs
contracts/contracts/contracts-core/: Cargo.toml
contracts/contracts/contracts-core/src/: msg.rs
contracts/contracts/ethereum-analyzer/: Cargo.toml
contracts/contracts/ethereum-analyzer/src/: contract.rs  ethereum.rs  lib.rs  msg.rs
contracts/contracts/inference-callback/: Cargo.toml
contracts/contracts/inference-callback/src/: contract.rs  msg.rs
contracts/contracts/osmosis-analyzer/: Cargo.toml
contracts/contracts/osmosis-analyzer/src/: contract.rs  lib.rs  msg.rs  osmosis.rs
contracts/contracts/sample/: Cargo.toml  README.md
contracts/contracts/sample/src/: contract.rs  lib.rs  msg.rs
contracts/contracts/wormhole-relayer/: Cargo.toml
contracts/contracts/wormhole-relayer/src/: contract.rs  lib.rs  methods.rs  msg.rs  state.rs  tests.rs
contracts/cw20-ics20/: Cargo.toml  README.md
contracts/cw20-ics20/.cargo/: config
contracts/cw20-ics20/src/: amount.rs  contract.rs  error.rs  ibc.rs  lib.rs  migrations.rs  msg.rs  state.rs  test_helpers.rs
contracts/lib/analyzers-core/: Cargo.toml
contracts/merkle-verifier/: Cargo.toml
contracts/merkle-verifier/rs-merkle/: Cargo.toml  LICENSE.md
contracts/merkle-verifier/rs-merkle/src/: error.rs  hasher.rs  lib.rs  merkle_proof.rs  merkle_tree.rs  partial_tree.rs  prelude.rs
contracts/merkle-verifier/rs-merkle/tests/: common.rs  merkle_proof_test.rs  merkle_tree_test.rs
contracts/merkle-verifier/src/: contract.rs  integration_tests.rs  lib.rs  msg.rs
contracts/miden-verifier/: Cargo.toml  Developing.md  Publishing.md  README.md
contracts/miden-verifier/.github/workflows/: Release.yml
contracts/miden-verifier/meta/: README.md
contracts/miden-verifier/src/: contract.rs  integration_tests.rs  msg.rs
contracts/midenverif-wasm/: Cargo.toml
contracts/proxy/: Cargo.toml
contracts/proxy/src/: contract.rs  error.rs  helpers.rs  msg.rs  state.rs
contracts/scripts/: optimizer.sh
contracts/stark-verifier/: .genignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  Importing.md  NOTICE  cargo-generate.toml
contracts/stark-verifier/.github/workflows/: Basic.yml
contracts/stark-verifier/ministark/: Cargo.toml  rustfmt.toml
contracts/stark-verifier/ministark/benches/: matrix.rs  merkle_tree.rs
contracts/stark-verifier/ministark/gpu-poly/: Cargo.toml  Makefile  README.md
contracts/stark-verifier/ministark/src/: air.rs  calculator.rs  challenges.rs  channel.rs  composer.rs  constraints.rs  fri.rs  hints.rs  lib.rs  macros.rs  matrix.rs  merkle.rs  prover.rs  random.rs  trace.rs  utils.rs  verifier.rs
contracts/stark-verifier/ministark/tests/: constraint.rs  lde_eval.rs  merkle.rs
contracts/stark-verifier/sandstorm/: Cargo.toml
contracts/stark-verifier/sandstorm/src/: air.rs  binary.rs  lib.rs  main.rs  prover.rs  trace.rs  utils.rs
contracts/stark-verifier/src/: contract.rs  integration_tests.rs  msg.rs
contracts/verifier/: .gitignore  Cargo.toml  README.md
contracts/verifier/.circleci/: config.yml
contracts/verifier/meta/: appveyor.yml
contracts/verifier/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
contracts/watchlist/: Cargo.toml
contracts/watchlist/src/: contract.rs  error.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
contracts/wrapper/: Cargo.toml  README.md
contracts/wrapper/src/: allowances.rs  contract.rs  enumerable.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/wrapperBAK/: Cargo.toml
contracts/wrapperBAK/.cargo/: config
contracts/wrapperBAK/meta/: test_generate.sh
contracts/wrapperBAK/src/: allowances.rs  contract.rs  error.rs  helpers.rs  lib.rs  msg.rs
(+6894 files in other folders)
