[workspace]
members = ["packages/*", "contracts/*"]

# Resolver has to be set explicitely in workspaces, see https://github.com/rust-lang/cargo/issues/9956
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
cosmwasm-schema = "2.0.0"
cosmwasm-std = "2.0.2"
cw-controllers = "2.0.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
borsh = "0.8.1"
schemars = "0.8.15"
semver = "1"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
thiserror = "1.0.4"

bindings = { path = "packages/bindings", version = "0.1.0" }
sample = { path = "contracts/sample", version = "0.1.0", features = [
  "library",
] }
basic-analyzer = { path = "contracts/basic-analyzer", version = "0.1.0", features = [
  "library",
] }
ethereum-analyzer = { path = "contracts/ethereum-analyzer", version = "0.1.0", features = [
  "library",
] }

[profile.release.package.sample]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
