[package]
name = "fusion_stark_verifier"
version = "0.1.0"
authors = ["Sasha Duke <sasha.duke@qredo.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
base64 = "0.21.0"
cosmwasm-schema = "1.1.2"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
hex = "0.4.3"
schemars = "0.8.8"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = { version = "1.0.31" }
sandstorm = { path = "./sandstorm" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
gpu-poly = { git = "https://github.com/andrewmilson/ministark" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
structopt = "0.3.26"
bincode = "1.2.1"
num-bigint = "0.4.3"
ruint = { version = "1.7.0", features = [ "serde", "num-bigint" ] }
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24"
pollster = "0.2.4"
rayon = { version = "1.5.3", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
cw-multi-test = "0.13.2"
