[package]
name = "basic-analyzer"
version.workspace = true
edition = "2021"
description = ""
license = "Apache-2.0"
repository = "https://github.com/warden-protocol/wardenprotocol"
homepage = "https://wardenprotocol.org/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
analyzers-core = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
bindings = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde-json-wasm = "1.0.1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
