[package]
name = "ethereum-analyzer"
version.workspace = true
edition = "2021"
description = ""
license = "Apache-2.0"
repository = "https://github.com/warden-protocol/wardenprotocol"
homepage = "https://wardenprotocol.org/"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []
test-utils = []

[dependencies]
analyzers-core = { workspace = true }
cosmwasm-schema = { workspace = true }
cw2 = { workspace = true }
bindings = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde-json-wasm = "1.0.1"
# alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0", features = ["consensus", "rpc-types-eth", "rlp", "serde"] }
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", default-features = false, version = "0.1.0" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", default-features = false, version = "0.1.0" }
alloy-rlp = { version = "0.3", default-features = false }
alloy-primitives = "0.7.6"
hex = "0.4.3"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
