[package]
name = "rs_merkle"
version = "1.2.0"
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
description = "The most advanced Merkle Tree library for Rust. Supports creating and verifying proofs, multi-proofs, as well as advanced features, such as tree diffs, transactional changes, and rollbacks"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/antouhou/rs-merkle"
documentation = "https://docs.rs/rs_merkle/"
readme = "README.md"
keywords = ["merkle", "tree", "proof", "hash", "multiproof",]
exclude = ["/ci/*", "/scripts/*", "/.github/*", "/bors.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10", default-features = false }

# standard crate data is left out
[dev-dependencies]
rayon = "1.5.1"

[features]
default = ['std']
std = ["sha2/std"]
