[package]
name = "sandstorm"
description = "SHARP compatible Cairo prover"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
asm = [ "ministark/asm" ]
# gpu = [ "ministark/gpu" ]
# parallel = [ "dep:rayon", "ministark/parallel" ]

[dependencies]
ministark = { path = "../ministark" }
gpu-poly = { path = "../ministark/gpu-poly" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-std = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
structopt = "0.3.26"
bincode = "1.2.1"
num-bigint = "0.4.3"
ruint = { version = "1.7.0", features = [ "serde", "num-bigint" ] }
serde = "1.0.147"
serde_json = "1.0.89"
strum = "0.24.1"
strum_macros = "0.24"
pollster = "0.2.4"
# rayon = { version = "1.5.3", optional = true }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# jemallocator = "0.5.0"

# taken from https://github.com/recmo/uint
# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true