[package]
name = "gpu-poly"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

[dependencies]
libc = "0.2"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
ark-ff = "0.4.0"
ark-ff-optimized = "0.4.0"
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-serialize = "0.4.0"
once_cell = "1.15.0"
rayon = { version = "1.5.3", optional = true }
ark-std = "0.4.0"
rand = { version = "0.8.5", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }

[features]
default = []
# parallel = [ "dep:rayon", "ark-std/parallel" ]

# Apple silicon depencencies
[target.'cfg(target_os = "macos")'.dependencies]
metal = { git = "https://github.com/gfx-rs/metal-rs" }

# Apple silicon dev-depencencies
[target.'cfg(target_os = "macos")'.dev-dependencies]
objc = "0.2.7"

[dev-dependencies]
criterion = "0.4.0"

[[target.'cfg(target_arch = "aarch64")'.bench]]
name = "fft"
path = "benches/fft.rs"
harness = false